--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,10 @@
 #
 ---
 include:
-  - board: seeeduino_xiao_ble
-    shield: mamekey
+include:
   - board: seeeduino_xiao_ble
     shield: mamekey rgbled_adapter
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
