--- a/build.yaml
+++ b/build.yaml
@@ -20,4 +20,6 @@
 ---
 include:
   - board: seeeduino_xiao_ble
-    shield: hummingbird rgbled_adapter
+    shield: mamekey rgbled_adapter
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
