--- a/config/boards/shields/mamekey/mamekey.conf
+++ b/config/boards/shields/mamekey/mamekey.conf
@@ -16,7 +16,7 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 
-CONFIG_ZMK_RGB_UNDERGLOW=y 
+# CONFIG_ZMK_RGB_UNDERGLOW=y 
 
 
 CONFIG_RGBLED_WIDGET=y
@@ -26,7 +26,7 @@ CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
 CONFIG_RGBLED_WIDGET_SHOW_LAYER_CHANGE=y
 CONFIG_RGBLED_WIDGET_LAYER_COLOR=7
 
-CONFIG_RGBLED_WIDGET_SHOW_LAYER_COLORS=y
+# CONFIG_RGBLED_WIDGET_SHOW_LAYER_COLORS=y
 
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=3
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
