--- a/config/boards/shields/mamekey/mamekey.conf
+++ b/config/boards/shields/mamekey/mamekey.conf
@@ -4,8 +4,8 @@ CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_ZMK_BLE=y
 CONFIG_ZMK_USB=y
 
-CONFIG_ZMK_USB_LOGGING=y
-CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+# CONFIG_ZMK_USB_LOGGING=y
+# CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 
 CONFIG_INPUT=y
 CONFIG_EC11=y
@@ -13,8 +13,8 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 CONFIG_ZMK_BATTERY_REPORTING=y
 
-CONFIG_ZMK_STUDIO=y
-CONFIG_ZMK_STUDIO_LOCKING=n
+# CONFIG_ZMK_STUDIO=y
+# CONFIG_ZMK_STUDIO_LOCKING=n
 
 CONFIG_ZMK_RGB_UNDERGLOW=y 
 
