--- a/config/boards/shields/mamekey/mamekey.conf
+++ b/config/boards/shields/mamekey/mamekey.conf
@@ -17,7 +17,7 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 # CONFIG_ZMK_STUDIO_LOCKING=n
 
 CONFIG_ZMK_RGB_UNDERGLOW=y 
-
+CONFIG_WS2812_STRIP=y
 
 CONFIG_RGBLED_WIDGET=y
 CONFIG_RGBLED_WIDGET_INTERVAL_MS=250
