--- a/build.yaml
+++ b/build.yaml
@@ -21,5 +21,7 @@
 include:
   - board: seeeduino_xiao_ble
     shield: mamekey rgbled_adapter
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: seeeduino_xiao_ble
     shield: settings_reset
