encoderとsensorsをdtsiに記載

--- a/config/boards/shields/mamekey/mamekey.dtsi
+++ b/config/boards/shields/mamekey/mamekey.dtsi
@@ -80,6 +80,20 @@
 
         interrupt-gpios = <&xiao_d 1 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN) >;
     };
+    
+        encoder: encoder {
+        compatible = "alps,ec11";
+        a-gpios = <&xiao_d 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        b-gpios = <&xiao_d 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+        steps = <24>;
+        status = "okay";
+    };
+    
+    sensors: sensors {
+        compatible = "zmk,keymap-sensors";
+        sensors = <&encoder>;
+        triggers-per-rotation = <10>;
+    };
 };
 
 &xiao_i2c { status = "disabled"; };
