--- a/config/boards/shields/mamekey/mamekey.conf
+++ b/config/boards/shields/mamekey/mamekey.conf
@@ -20,6 +20,7 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
+CONFIG_ZMK_RGB_UNDERGLOW_ON_USB_ONLY=n
 
 CONFIG_RGBLED_WIDGET=y
 CONFIG_RGBLED_WIDGET_INTERVAL_MS=250
