--- a/config/boards/shields/mamekey/mamekey.conf
+++ b/config/boards/shields/mamekey/mamekey.conf
@@ -30,7 +30,7 @@ CONFIG_RGBLED_WIDGET_SHOW_LAYER_CHANGE=n
 
 CONFIG_RGBLED_WIDGET_SHOW_LAYER_COLORS=y
 
-
-
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=3
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+
+CONFIG_ZMK_POINTING=y
