--- a/config/boards/shields/mamekey/mamekey.dtsi
+++ b/config/boards/shields/mamekey/mamekey.dtsi
@@ -3,6 +3,10 @@
 #include <dt-bindings/zmk/bt.h>
 
 / {
+    &msc_input_listener {
+    input-processors = <&zip_temp_layer 2 2000>;
+}
+
     chosen {
         zmk,physical-layout = &mamekey_physical_layout;
     };
