--- a/config/boards/shields/mamekey/mamekey.conf
+++ b/config/boards/shields/mamekey/mamekey.conf
@@ -29,14 +29,22 @@ CONFIG_RGBLED_WIDGET_SHOW_LAYER_CHANGE=n
 # CONFIG_RGBLED_WIDGET_LAYER_COLOR=7
 
 CONFIG_RGBLED_WIDGET_SHOW_LAYER_COLORS=y
-CONFIG_RGBLED_WIDGET_LAYER_1_COLOR=6 #num_cyan
-CONFIG_RGBLED_WIDGET_LAYER_2_COLOR=3 #sym_yellow
-CONFIG_RGBLED_WIDGET_LAYER_3_COLOR=7 #jis_white
-CONFIG_RGBLED_WIDGET_LAYER_4_COLOR=6 #jisnum_cyan
-CONFIG_RGBLED_WIDGET_LAYER_5_COLOR=3 #jissys_yellow
-CONFIG_RGBLED_WIDGET_LAYER_6_COLOR=5 #macarrow_magenta
-CONFIG_RGBLED_WIDGET_LAYER_7_COLOR=5 #winarrow_magenta
-CONFIG_RGBLED_WIDGET_LAYER_8_COLOR=4 #BT_blue
+#num_cyan
+CONFIG_RGBLED_WIDGET_LAYER_1_COLOR=6
+#sym_yellow
+CONFIG_RGBLED_WIDGET_LAYER_2_COLOR=3
+#jis_white
+CONFIG_RGBLED_WIDGET_LAYER_3_COLOR=7
+#jisnum_cyan
+CONFIG_RGBLED_WIDGET_LAYER_4_COLOR=6
+#jissys_yellow
+CONFIG_RGBLED_WIDGET_LAYER_5_COLOR=3
+#macarrow_magenta
+CONFIG_RGBLED_WIDGET_LAYER_6_COLOR=5
+#winarrow_magenta
+CONFIG_RGBLED_WIDGET_LAYER_7_COLOR=5
+#BT_blue
+CONFIG_RGBLED_WIDGET_LAYER_8_COLOR=4
 
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=3
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
