--- a/config/boards/shields/mamekey/mamekey.conf
+++ b/config/boards/shields/mamekey/mamekey.conf
@@ -33,14 +33,14 @@ CONFIG_RGBLED_WIDGET_SHOW_LAYER_COLORS=y
 CONFIG_RGBLED_WIDGET_LAYER_1_COLOR=6
 #sym_yellow
 CONFIG_RGBLED_WIDGET_LAYER_2_COLOR=3
+#arr_magenta
+CONFIG_RGBLED_WIDGET_LAYER_3_COLOR=5
 #jis_white
-CONFIG_RGBLED_WIDGET_LAYER_3_COLOR=7
+CONFIG_RGBLED_WIDGET_LAYER_4_COLOR=7
 #jisnum_cyan
-CONFIG_RGBLED_WIDGET_LAYER_4_COLOR=6
+CONFIG_RGBLED_WIDGET_LAYER_5_COLOR=6
 #jissys_yellow
-CONFIG_RGBLED_WIDGET_LAYER_5_COLOR=3
-#macarrow_magenta
-CONFIG_RGBLED_WIDGET_LAYER_6_COLOR=5
+CONFIG_RGBLED_WIDGET_LAYER_6_COLOR=3
 #winarrow_magenta
 CONFIG_RGBLED_WIDGET_LAYER_7_COLOR=5
 #BT_blue
